[package]
name = "rcsp"
version = "0.0.1"
authors = ["Liwiusz Ociepa <liwiusz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6"
env_logger = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
