[package]
name = "rcsp"
version = "0.0.2"
authors = ["Liwiusz Ociepa <liwiusz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3.30"
crossbeam = "0.8"
lapin = "*"
async-global-executor = "*"
